reimplementation/smash3/crates/adl-viz/tests/snapshots/dot_snapshots__bins_partition_flowchart.snap
---
source: crates/adl-viz/tests/dot_snapshots.rs
expression: fc
---
digraph flowchart {
  rankdir=LR;
  node [shape=box, fontname="monospace"];
  label="bins_partition.adl";
  labelloc=t;
  subgraph cluster_objects {
    label="objects";
    color=gray70;
    coll0 [label="MET\n[base]", style=filled, fillcolor="#e0f0ff"];
  }
  subgraph cluster_regions {
    label="regions";
    color=gray70;
    region0 [label="SR_binned\lselect (MET.pt > 250)\lbin MET.pt 250 300 500\l", style=filled, fillcolor="#f0fff0"];
    region1 [label="SR_gap\lselect (MET.pt > 250)\lbin MET.pt 300 500\l", style=filled, fillcolor="#f0fff0"];
  }
}
