reimplementation/smash3/crates/adl-viz/tests/snapshots/dot_snapshots__disjoint_jet_index_flowchart.snap
---
source: crates/adl-viz/tests/dot_snapshots.rs
expression: fc
---
digraph flowchart {
  rankdir=LR;
  node [shape=box, fontname="monospace"];
  label="disjoint_jet_index.adl";
  labelloc=t;
  subgraph cluster_objects {
    label="objects";
    color=gray70;
    coll0 [label="JET\n[base]", style=filled, fillcolor="#e0f0ff"];
    coll1 [label="jets\n[filtered]", style=filled, fillcolor="#e0f0ff"];
  }
  coll0 -> coll1 [label="take"];
  subgraph cluster_regions {
    label="regions";
    color=gray70;
    region0 [label="SR_high\lselect (jets[0].pt > 300)\l", style=filled, fillcolor="#f0fff0"];
    region1 [label="SR_low\lselect (jets[0].pt < 200)\l", style=filled, fillcolor="#f0fff0"];
  }
  coll1 -> region0 [style=dotted, color=gray60];
  coll1 -> region1 [style=dotted, color=gray60];
}
