reimplementation/smash3/crates/adl-viz/tests/snapshots/dot_snapshots__ex01_selection_ast.snap
---
source: crates/adl-viz/tests/dot_snapshots.rs
expression: ast
---
digraph ast {
  node [shape=box, fontname="monospace"];
  label="ex01_selection.adl (AST)";
  labelloc=t;
  n0 [label="object goodJets", style=filled, fillcolor="#e0f0ff"];
  n1 [label="and"];
  n2 [label=">"];
  n3 [label="this.pt"];
  n2 -> n3;
  n4 [label="50"];
  n2 -> n4;
  n1 -> n2;
  n5 [label="<"];
  n6 [label="abs"];
  n7 [label="this.eta"];
  n6 -> n7;
  n5 -> n6;
  n8 [label="2.4"];
  n5 -> n8;
  n1 -> n5;
  n0 -> n1 [label="predicate"];
  n9 [label="object goodbJets", style=filled, fillcolor="#e0f0ff"];
  n10 [label="=="];
  n11 [label="this.btag"];
  n10 -> n11;
  n12 [label="1"];
  n10 -> n12;
  n9 -> n10 [label="predicate"];
  n13 [label="object goodEles", style=filled, fillcolor="#e0f0ff"];
  n14 [label="and"];
  n15 [label=">"];
  n16 [label="this.pt"];
  n15 -> n16;
  n17 [label="20"];
  n15 -> n17;
  n14 -> n15;
  n18 [label="<"];
  n19 [label="abs"];
  n20 [label="this.eta"];
  n19 -> n20;
  n18 -> n19;
  n21 [label="2.1"];
  n18 -> n21;
  n14 -> n18;
  n13 -> n14 [label="predicate"];
  n22 [label="object goodMuos", style=filled, fillcolor="#e0f0ff"];
  n23 [label="and"];
  n24 [label=">"];
  n25 [label="this.pt"];
  n24 -> n25;
  n26 [label="20"];
  n24 -> n26;
  n23 -> n24;
  n27 [label="<"];
  n28 [label="abs"];
  n29 [label="this.eta"];
  n28 -> n29;
  n27 -> n28;
  n30 [label="2.1"];
  n27 -> n30;
  n23 -> n27;
  n22 -> n23 [label="predicate"];
  n31 [label="region baseline", style=filled, fillcolor="#f0fff0"];
  n32 [label="true"];
  n31 -> n32 [label="select"];
  n33 [label=">="];
  n34 [label="size(goodJets)"];
  n33 -> n34;
  n35 [label="3"];
  n33 -> n35;
  n31 -> n33 [label="select"];
  n36 [label=">="];
  n37 [label="size(goodbJets)"];
  n36 -> n37;
  n38 [label="1"];
  n36 -> n38;
  n31 -> n36 [label="select"];
  n39 [label=">"];
  n40 [label="goodJets[0].pt"];
  n39 -> n40;
  n41 [label="200"];
  n39 -> n41;
  n31 -> n39 [label="select"];
  n42 [label="=="];
  n43 [label="size(leptons)"];
  n42 -> n43;
  n44 [label="1"];
  n42 -> n44;
  n31 -> n42 [label="select"];
  n45 [label="region singleelectron", style=filled, fillcolor="#f0fff0"];
  n46 [label="=="];
  n47 [label="size(goodEles)"];
  n46 -> n47;
  n48 [label="1"];
  n46 -> n48;
  n45 -> n46 [label="select"];
  n49 [label="region singlemuon", style=filled, fillcolor="#f0fff0"];
  n50 [label="=="];
  n51 [label="size(goodMuos)"];
  n50 -> n51;
  n52 [label="1"];
  n50 -> n52;
  n49 -> n50 [label="select"];
  n0 -> n9 [style=invis, weight=100, minlen=5];
  n9 -> n13 [style=invis, weight=100, minlen=3];
  n13 -> n22 [style=invis, weight=100, minlen=5];
  n22 -> n31 [style=invis, weight=100, minlen=5];
  n31 -> n45 [style=invis, weight=100, minlen=3];
  n45 -> n49 [style=invis, weight=100, minlen=3];
}
