reimplementation/smash3/crates/adl-viz/tests/snapshots/dot_snapshots__ex06_bins_ast.snap
---
source: crates/adl-viz/tests/dot_snapshots.rs
expression: ast
---
digraph ast {
  node [shape=box, fontname="monospace"];
  label="ex06_bins.adl (AST)";
  labelloc=t;
  n0 [label="define MTl (numeric)", style=filled, fillcolor="#fff0e0"];
  n1 [label="sqrt((((2 * leptons[0].pt) * MET.pt) * (1 - cos((MET.phi - leptons[0].phi)))))"];
  n0 -> n1;
  n2 [label="define HT (numeric)", style=filled, fillcolor="#fff0e0"];
  n3 [label="fHT(jets)"];
  n2 -> n3;
  n4 [label="define MT2j0j1 (numeric)", style=filled, fillcolor="#fff0e0"];
  n5 [label="fMT2(jets[0], jets[1], MET)"];
  n4 -> n5;
  n6 [label="object jets", style=filled, fillcolor="#e0f0ff"];
  n7 [label="and"];
  n8 [label=">"];
  n9 [label="this.pt"];
  n8 -> n9;
  n10 [label="50"];
  n8 -> n10;
  n7 -> n8;
  n11 [label="<"];
  n12 [label="abs"];
  n13 [label="this.eta"];
  n12 -> n13;
  n11 -> n12;
  n14 [label="2.4"];
  n11 -> n14;
  n7 -> n11;
  n6 -> n7 [label="predicate"];
  n15 [label="region hadronic", style=filled, fillcolor="#f0fff0"];
  n16 [label=">="];
  n17 [label="size(jets)"];
  n16 -> n17;
  n18 [label="4"];
  n16 -> n18;
  n15 -> n16 [label="select"];
  n19 [label="=="];
  n20 [label="size(leptons)"];
  n19 -> n20;
  n21 [label="0"];
  n19 -> n21;
  n15 -> n19 [label="select"];
  n22 [label=">"];
  n23 [label="fHT(jets)"];
  n22 -> n23;
  n24 [label="300"];
  n22 -> n24;
  n15 -> n22 [label="select"];
  n25 [label=">"];
  n26 [label="dphi(jets[0], MET)"];
  n25 -> n26;
  n27 [label="0.5"];
  n25 -> n27;
  n15 -> n25 [label="select"];
  n28 [label=">"];
  n29 [label="dphi(jets[1], MET)"];
  n28 -> n29;
  n30 [label="0.5"];
  n28 -> n30;
  n15 -> n28 [label="select"];
  n31 [label=">"];
  n32 [label="dphi(jets[2], MET)"];
  n31 -> n32;
  n33 [label="0.5"];
  n31 -> n33;
  n15 -> n31 [label="select"];
  n34 [label=">"];
  n35 [label="dR(jets[0], jets[1])"];
  n34 -> n35;
  n36 [label="1.0"];
  n34 -> n36;
  n15 -> n34 [label="select"];
  n37 [label=">"];
  n38 [label="fMT2(jets[0], jets[1], MET)"];
  n37 -> n38;
  n39 [label="300"];
  n37 -> n39;
  n15 -> n37 [label="select"];
  n40 [label="and"];
  n41 [label="[] 4 5"];
  n42 [label="size(jets)"];
  n41 -> n42;
  n40 -> n41;
  n43 [label="[] 300 500"];
  n44 [label="fMT2(jets[0], jets[1], MET)"];
  n43 -> n44;
  n40 -> n43;
  n15 -> n40 [label="bin"];
  n45 [label="and"];
  n46 [label="[] 4 5"];
  n47 [label="size(jets)"];
  n46 -> n47;
  n45 -> n46;
  n48 [label="[] 500 800"];
  n49 [label="fMT2(jets[0], jets[1], MET)"];
  n48 -> n49;
  n45 -> n48;
  n15 -> n45 [label="bin"];
  n50 [label="and"];
  n51 [label="[] 4 5"];
  n52 [label="size(jets)"];
  n51 -> n52;
  n50 -> n51;
  n53 [label="[] 800 1000"];
  n54 [label="fMT2(jets[0], jets[1], MET)"];
  n53 -> n54;
  n50 -> n53;
  n15 -> n50 [label="bin"];
  n55 [label="and"];
  n56 [label="[] 4 5"];
  n57 [label="size(jets)"];
  n56 -> n57;
  n55 -> n56;
  n58 [label=">"];
  n59 [label="fMT2(jets[0], jets[1], MET)"];
  n58 -> n59;
  n60 [label="1000"];
  n58 -> n60;
  n55 -> n58;
  n15 -> n55 [label="bin"];
  n61 [label="and"];
  n62 [label=">="];
  n63 [label="size(jets)"];
  n62 -> n63;
  n64 [label="6"];
  n62 -> n64;
  n61 -> n62;
  n65 [label="[] 300 500"];
  n66 [label="fMT2(jets[0], jets[1], MET)"];
  n65 -> n66;
  n61 -> n65;
  n15 -> n61 [label="bin"];
  n67 [label="and"];
  n68 [label=">="];
  n69 [label="size(jets)"];
  n68 -> n69;
  n70 [label="6"];
  n68 -> n70;
  n67 -> n68;
  n71 [label="[] 500 800"];
  n72 [label="fMT2(jets[0], jets[1], MET)"];
  n71 -> n72;
  n67 -> n71;
  n15 -> n67 [label="bin"];
  n73 [label="and"];
  n74 [label=">="];
  n75 [label="size(jets)"];
  n74 -> n75;
  n76 [label="6"];
  n74 -> n76;
  n73 -> n74;
  n77 [label=">"];
  n78 [label="fMT2(jets[0], jets[1], MET)"];
  n77 -> n78;
  n79 [label="800"];
  n77 -> n79;
  n73 -> n77;
  n15 -> n73 [label="bin"];
  n80 [label="region leptonic", style=filled, fillcolor="#f0fff0"];
  n81 [label=">="];
  n82 [label="size(jets)"];
  n81 -> n82;
  n83 [label="3"];
  n81 -> n83;
  n80 -> n81 [label="select"];
  n84 [label="=="];
  n85 [label="size(leptons)"];
  n84 -> n85;
  n86 [label="1"];
  n84 -> n86;
  n80 -> n84 [label="select"];
  n87 [label=">"];
  n88 [label="+"];
  n89 [label="fHT(jets)"];
  n88 -> n89;
  n90 [label="leptons[0].pt"];
  n88 -> n90;
  n87 -> n88;
  n91 [label="300"];
  n87 -> n91;
  n80 -> n87 [label="select"];
  n92 [label=">"];
  n93 [label="MET.pt"];
  n92 -> n93;
  n94 [label="150"];
  n92 -> n94;
  n80 -> n92 [label="select"];
  n95 [label="sqrt((((2 * leptons[0].pt) * MET.pt) * (1 - cos((MET.phi - leptons[0].phi)))))"];
  n80 -> n95 [label="bin"];
  n0 -> n2 [style=invis, weight=100, minlen=2];
  n2 -> n4 [style=invis, weight=100, minlen=2];
  n4 -> n6 [style=invis, weight=100, minlen=2];
  n6 -> n15 [style=invis, weight=100, minlen=5];
  n15 -> n80 [style=invis, weight=100, minlen=4];
}
